(lib,refac,test) upgrade libs, code cleanup, reduce test contexts creation